--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Dropzone Múltiple subida de archivos</h1>
 <h2 class="lead">Subida de múltiples archivos con Dropzone, Bootstrap 4, .NetCore 3.1 y jQuery Sortable.</h2>
-
+<h2 class="lead">@ViewData["Ambiente"],@ViewData["correo"]</h2>
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item active" aria-current="page">Demo</li>
