right ip and working good

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 
-<h1>Dropzone Múltiple subida de archivos</h1>
+<h1>Dropzone Múltiple subida de archivos @ViewData["currDate"]</h1>
 <h2 class="lead">Subida de múltiples archivos con Dropzone, Bootstrap 4, .NetCore 3.1 y jQuery Sortable.</h2>
-<h2 class="lead">@ViewData["Ambiente"],@ViewData["correo"]</h2>
+<h3>Environment: @ViewData["Ambiente"], Email: @ViewData["correo"], IP: @ViewData["IpLocal"]</h3>
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item active" aria-current="page">Demo</li>
