--- a/Views/Home/Images.cshtml
+++ b/Views/Home/Images.cshtml
@@ -7,7 +7,7 @@
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item" aria-current="page"><a href="~/Home">Demo</a></li>
+        <li class="breadcrumb-item" aria-current="page"><a href="~/">Demo</a></li>
         <li class="breadcrumb-item active" aria-current="page">Dropzone Bootstrap Imágenes guardadas</li>
     </ol>
 </nav>
