--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
         <a class="navbar-brand" href="@ViewBag.GitHub">
-            <img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png" width="30" height="30" alt="Robert Rozas Navarro">
+            <img src="@ViewBag.logo" width="30" height="30" alt="Robert Rozas Navarro">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
